react component created and redered

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script type="module" src="./main.js"></script>
 </head>
 <body>
-    This is my page
+    <div id="root"></div>   
 </body>
 </html>
