--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
-    <script type="module" src="./main.js"></script>
+    <link rel="stylesheet" href="src/assets/scss/main.scss" />
+    <script type="module" src="./src/main.js"></script>
 </head>
 <body>
     <div id="root"></div>   
