--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="module" src="src/main.js"></script>
 </head>
 <body>
-    <div id="root"></div>   
+    <div id="root">
+        Test 2
+    </div>   
 </body>
 </html>
